--- a/心情随笔/夜里睡不着-听音乐.html
+++ b/心情随笔/夜里睡不着-听音乐.html
@@ -106,7 +106,10 @@ So I\'ll wait \'til it comes to me(我将等待属于我的那天)</pre>
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="80"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
