--- a/typecho/解决TypechoSAE版404乱码.html
+++ b/typecho/解决TypechoSAE版404乱码.html
@@ -175,7 +175,10 @@ require_once <span class="string">'Typecho/Router/Exception.php'</span>;
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="97"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
