--- a/关注互联网/user-requirement.html
+++ b/关注互联网/user-requirement.html
@@ -104,7 +104,10 @@
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="136"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
