--- a/心情随笔/PR更新升3淘宝店清仓特价.html
+++ b/心情随笔/PR更新升3淘宝店清仓特价.html
@@ -113,7 +113,10 @@
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="112"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
