--- a/心情随笔/zhaopin.html
+++ b/心情随笔/zhaopin.html
@@ -109,7 +109,10 @@
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="181"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
