--- a/心情随笔/更换域名及空间.html
+++ b/心情随笔/更换域名及空间.html
@@ -106,7 +106,10 @@ CPU: 1000MHZ GUARANTEED
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="84"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
