--- a/程序员/我在赶集网的两个月-完整.html
+++ b/程序员/我在赶集网的两个月-完整.html
@@ -277,7 +277,10 @@
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="92"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
