--- a/网页设计/ie-background-transparent.html
+++ b/网页设计/ie-background-transparent.html
@@ -100,7 +100,10 @@ filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=#7F000000,endcol
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="138"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
