--- a/网页设计/美化网页select下拉选择框.html
+++ b/网页设计/美化网页select下拉选择框.html
@@ -108,7 +108,10 @@
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="127"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
