--- a/网页设计/设定网页文字大小.html
+++ b/网页设计/设定网页文字大小.html
@@ -145,7 +145,10 @@ h1{
 
 <section id="comment">
 	<h1 class="title">留言</h1>
-	<div class="ds-thread"></div>
+	
+		<div class="ds-thread" data-thread-key="30"></div>
+	
+	
 	<script type="text/javascript">
 		var duoshuoQuery = {short_name:"whyyou"};
 		(function() {
