--- a/关于TA.html
+++ b/关于TA.html
@@ -87,7 +87,7 @@
 <section id="comment">
 	<h1 class="title">留言</h1>
 	
-		<div class="ds-thread"></div>
+		<div class="ds-thread" data-thread-key="2"></div>
 	
 	
 	<script type="text/javascript">
